--- a/translator.html
+++ b/translator.html
@@ -71,8 +71,8 @@
             
         </div>
     </div>
-    <script src="js/countries.js"></script>
-    <script src="js/script.js"></script>
+    <script src="countries.js"></script>
+    <script src="script.js"></script>
 </body>
 <!DOCTYPE html>
 <html lang="en">
